--- a/app/src/main/res/layout/fragment_geostory_share.xml
+++ b/app/src/main/res/layout/fragment_geostory_share.xml
@@ -321,17 +321,17 @@
 
             <ImageView
                 android:id="@+id/image_map_art"
-                android:layout_width="256dp"
+                android:layout_width="match_parent"
                 android:layout_height="256dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.31"
+                app:layout_constraintVertical_bias="0.29000002"
                 app:srcCompat="@drawable/art_geostory_map" />
 
             <FrameLayout
@@ -340,12 +340,12 @@
                 android:layout_height="256dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginBottom="64dp"
+                android:layout_marginBottom="32dp"
                 app:layout_constraintBottom_toBottomOf="@+id/image_map_art"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0">
+                app:layout_constraintVertical_bias="1.0">
 
                 <ImageView
                     android:id="@+id/img_red_balloons"
