--- a/app/src/main/res/layout/fragment_geostory_map.xml
+++ b/app/src/main/res/layout/fragment_geostory_map.xml
@@ -71,6 +71,39 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/geostory_top_info_bar"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:paddingTop="8dp"
+        android:paddingStart="48dp"
+        android:paddingBottom="12dp"
+        android:paddingEnd="8dp"
+        android:elevation="4dp"
+        android:visibility="gone"
+        android:background="@color/colorPrimaryOverlay"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/geostory_top_info_text"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="start|center_vertical"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textAlignment="center"
+            android:fontFamily="@font/storywell_handwriting"
+            android:text="@string/geostory_found_info" />
+
+        <ImageView
+            android:id="@+id/geostory_top_info_icon"
+            android:layout_width="44dp"
+            android:layout_height="44dp"
+            android:src="@drawable/art_hero_mira_completed_full"/>
+
+    </LinearLayout>
+
     <fragment
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:id="@+id/map"
