Redesign the new geostory icon in HomeActivity tabs

--- a/app/src/main/res/drawable/ic_tab_geostory_new.xml
+++ b/app/src/main/res/drawable/ic_tab_geostory_new.xml
@@ -4,6 +4,9 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
+      android:pathData="M19.89,7.7a4.49,4.49 0,0 1,-4.5 -4.5,4.42 4.42,0 0,1 0.15,-1.1h-10A2.56,2.56 0,0 0,3 4.7v11a2.57,2.57 0,0 0,2.52 2.61H9.16a0.66,0.66 0,0 1,0.58 0.33l1.73,2.95a0.67,0.67 0,0 0,1.16 0l1.65,-2.93a0.67,0.67 0,0 1,0.58 -0.34h3.62A2.57,2.57 0,0 0,21 15.68V7.55A4.57,4.57 0,0 1,19.89 7.7Z"
+      android:fillColor="#2962ff"/>
+  <path
       android:pathData="M19.89,3.2m-3,0a3,3 0,1 1,6 0a3,3 0,1 1,-6 0"
       android:fillColor="#ffc246"/>
   <path
