--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -30,7 +30,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.38"
-                app:srcCompat="@mipmap/splash_image" />
+                app:srcCompat="@mipmap/art_splash" />
 
             <TextView
                 android:id="@+id/textInstruction"
