--- a/app/src/main/res/layout/fragment_firstrun_appintro.xml
+++ b/app/src/main/res/layout/fragment_firstrun_appintro.xml
@@ -20,7 +20,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@mipmap/splash_image" />
+            app:srcCompat="@mipmap/art_splash" />
 
         <TextView
             android:id="@+id/text"
