Update adventure tab icon

--- a/app/src/main/res/drawable/ic_tab_adventures.xml
+++ b/app/src/main/res/drawable/ic_tab_adventures.xml
@@ -4,30 +4,21 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
   <path
-      android:pathData="M12.7,22.21a0.41,0.41 0,1 1,-0.8 0V11.59a0.41,0.41 0,1 1,0.8 0Z"
-      android:fillColor="#fff"/>
+      android:fillColor="#FFFFFFFF"
+      android:pathData="M16.35,4.92a4,4 0,0 0,-8 0,5.37 5.37,0 0,0 3.15,5.31l-0.14,0.3a0.3,0.3 0,0 0,0.29 0.47h1.4a0.31,0.31 0,0 0,0.29 -0.47l-0.14,-0.3C14.9,9.67 16.42,7.53 16.35,4.92Z"/>
   <path
-      android:pathData="M16.3,4.74a4,4 0,0 0,-8 0c-0.09,3 2,5.29 4,5.29S16.39,7.69 16.3,4.74Z"
-      android:fillColor="#fff"/>
+      android:fillColor="#FFFFFFFF"
+      android:pathData="M12.29,11.33L12.29,11.33A0.75,0.75 0,0 1,13.04 12.08L13.04,22.26A0.75,0.75 0,0 1,12.29 23.01L12.29,23.01A0.75,0.75 0,0 1,11.54 22.26L11.54,12.08A0.75,0.75 0,0 1,12.29 11.33z"/>
   <path
-      android:pathData="M13.29,10.18a0.3,0.3 0,0 1,-0.29 0.46H11.6a0.3,0.3 0,0 1,-0.29 -0.46l0.78,-1.66c0.11,-0.25 0.31,-0.25 0.42,0Z"
-      android:fillColor="#fff"/>
+      android:fillColor="#FFFFFFFF"
+      android:pathData="M8.9094,17.878L8.9094,17.878A0.75,0.75 105.1021,0 1,9.9339 18.1525L10.9989,19.9972A0.75,0.75 105.1373,0 1,10.7244 21.0217L10.7244,21.0217A0.75,0.75 105.1373,0 1,9.6998 20.7472L8.6348,18.9025A0.75,0.75 105.1021,0 1,8.9094 17.878z"/>
   <path
-      android:pathData="M12.86,22.48a0.51,0.51 0,0 1,-0.62 0.23,0.44 0.44,0 0,1 -0.07,-0.62L14,19.18a0.48,0.48 0,0 1,0.61 -0.23,0.42 0.42,0 0,1 0.08,0.61Z"
-      android:fillColor="#fff"/>
+      android:fillColor="#FFFFFFFF"
+      android:pathData="M14.2799,18.8028L14.2799,18.8028A0.75,0.75 75.0359,0 1,14.5545 19.8273L12.9345,22.6333A0.75,0.75 75.0359,0 1,11.9099 22.9078L11.9099,22.9078A0.75,0.75 75.0359,0 1,11.6354 21.8833L13.2554,19.0773A0.75,0.75 75.0359,0 1,14.2799 18.8028z"/>
   <path
-      android:pathData="M21.6,15.23A3.73,3.73 0,0 0,20.14 10a4.16,4.16 0,0 0,-5.46 1.39c-1.63,2.51 -1.06,5.53 0.68,6.48S20.13,17.82 21.6,15.23Z"
-      android:fillColor="#fff"/>
+      android:fillColor="#FFFFFFFF"
+      android:pathData="M21.89,14.8a4,4 0,0 0,-6.93 -4A5.37,5.37 0,0 0,15 17l-0.28,0.19a0.3,0.3 0,0 0,0 0.55l1.21,0.7a0.3,0.3 0,0 0,0.48 -0.26l0,-0.33A5.38,5.38 0,0 0,21.89 14.8Z"/>
   <path
-      android:pathData="M16.14,18.5a0.31,0.31 0,0 1,-0.49 0.26l-1.2,-0.66a0.28,0.28 0,0 1,0 -0.52L16,16.49c0.22,-0.15 0.39,-0.06 0.35,0.22Z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M11.62,20.54a0.43,0.43 0,0 1,-0.08 0.62,0.5 0.5,0 0,1 -0.61,-0.23L9.27,18.31a0.43,0.43 0,0 1,0.07 -0.62,0.49 0.49,0 0,1 0.61,0.23Z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M9.28,10.14A4.16,4.16 0,0 0,3.82 8.75a3.73,3.73 0,0 0,-1.47 5.19c1.48,2.6 4.52,3.63 6.25,2.68S10.91,12.65 9.28,10.14Z"
-      android:fillColor="#fff"/>
-  <path
-      android:pathData="M9.56,16.36a0.28,0.28 0,0 1,0 0.52l-1.2,0.66a0.31,0.31 0,0 1,-0.5 -0.25l-0.19,-1.8c0,-0.27 0.13,-0.37 0.35,-0.21Z"
-      android:fillColor="#fff"/>
+      android:fillColor="#FFFFFFFF"
+      android:pathData="M8.89,10A4,4 0,0 0,2 14a5.38,5.38 0,0 0,5.38 3l0,0.33c0,0.28 0.25,0.4 0.48,0.26l1.22,-0.7a0.31,0.31 0,0 0,0 -0.55l-0.27,-0.19A5.36,5.36 0,0 0,8.89 10Z"/>
 </vector>
