--- a/app/src/main/res/layout/fragment_adventure.xml
+++ b/app/src/main/res/layout/fragment_adventure.xml
@@ -231,6 +231,15 @@
             android:paddingStart="@dimen/actionbar_padding"
             android:visibility="gone">
 
+            <ImageView
+                android:id="@+id/ic_sync_balloon_adult"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="22dp"
+                android:src="@drawable/art_a_balloon"/>
+
             <ProgressBar
                 android:id="@+id/progressBar_syncing_caregiver"
                 style="?android:attr/progressBarStyle"
@@ -265,6 +274,15 @@
             android:paddingEnd="@dimen/actionbar_padding"
             android:paddingStart="@dimen/actionbar_padding"
             android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/ic_sync_balloon_child"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="22dp"
+                android:src="@drawable/art_c_balloon"/>
 
             <ProgressBar
                 android:id="@+id/progressBar_syncing_child"
